# memory-transfer

./: .gitignore  Makefile  README.md  install-backend  install-skill.sh  install.sh
backend/: .env.example  README.md  pyproject.toml
backend/scripts/: run_dev.sh
backend/src/memory_transfer_server/: config.py  main.py  models.py
backend/src/memory_transfer_server/routes/: health.py  transfer.py
backend/src/memory_transfer_server/services/: bundle_store.py  cleanup_service.py  token_service.py
backend/tests/: test_health.py  test_transfer_create.py  test_transfer_fetch.py
docs/: api.md  architecture.md  memory-bundle-schema.md  transfer-flow.md
examples/: sample-memory-bundle.json
schemas/: memory-bundle.schema.json  transfer-confirm-import-request.schema.json  transfer-confirm-import-response.schema.json  transfer-create-request.schema.json  transfer-fetch-response.schema.json  transfer-lookup-request.schema.json  transfer-lookup-response.schema.json
shared/: README.md  conflict_policy.md  memory_types.md
skills/memory-transfer/: README.md  SKILL.md  config.env.example.txt  openclaw.yaml  skill.md
skills/memory-transfer/references/: bundle-format.md  conflict-rules.md  import-rules.md
skills/memory-transfer/scripts/: apply_import.py  confirm_import.py  create_transfer.py  export_memory.py  fetch_transfer.py  generate_qr.py  import_memory.py  install_local.sh  lookup_transfer.py  preview_bundle.py  skill_config.py
tests/skill_memory_transfer/: test_create_transfer.py  test_export_memory.py  test_import_memory.py
(+3 files in other folders)
